unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/DriftData__Drift_Opportunity_Conversation__c.object-meta.xml
<CustomObject>
    <description>Object for linking conversations within an account that took place before an opportunity&#39;s closed date to the opportunities in the account.  Allows flexibility when reporting at the account level.</description>
    <label>Drift Related Opportunity</label>
    <nameField>
        <displayFormat>DRIFTOPP-{0000000}</displayFormat>
        <label>Drift Related Opportunity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drift Related Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>