unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Account__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Account__c</fullName>
    <description>Salesforce Account associated with the Drift conversation.</description>
    <formula>HYPERLINK(&#39;/&#39;+ DriftData__Drift_Conversation__r.DriftData__Account__c ,  DriftData__Drift_Conversation__r.DriftData__Account__r.Name  , &#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce Account associated with the Drift conversation.</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>