unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Bot_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Bot_Message_Count__c</fullName>
    <description>Number of bot messages sent in the conversation.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Bot_Message_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of bot messages sent in the conversation.</inlineHelpText>
    <label>Bot Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>