unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Contact__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Contact__c</fullName>
    <description>Salesforce Contact associated with the Drift conversation.</description>
    <formula>HYPERLINK(&#39;/&#39; + DriftData__Drift_Conversation__r.DriftData__Contact__c ,  DriftData__Drift_Conversation__r.DriftData__Contact__r.FirstName + &#39; &#39; + DriftData__Drift_Conversation__r.DriftData__Contact__r.LastName , &#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Salesforce Contact associated with the Drift conversation.</inlineHelpText>
    <label>Contact</label>
    <type>Text</type>
</CustomField>