unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Conversation_ID__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_ID__c</fullName>
    <description>Drift&#39;s conversation ID.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Conversation_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Drift&#39;s conversation ID.</inlineHelpText>
    <label>Conversation ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>