unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Conversation_Source_URL_Path__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Conversation_Source_URL_Path__c</fullName>
    <description>The URL Path for the page where the Drift conversation was initiated.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Conversation_Source_URL_Path__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The URL Path for the page where the Drift conversation was initiated.</inlineHelpText>
    <label>Conversation Source URL Path</label>
    <type>Text</type>
</CustomField>