unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__ConversationOppKey__c.field-meta.xml
<CustomField>
    <fullName>DriftData__ConversationOppKey__c</fullName>
    <description>A unique key for the &quot;Drift Related Opportunity&quot; junction object created by joining the &quot;Drift Conversation&quot; object Salesforce ID to the &quot;Opportunity&quot; object Salesforce ID.</description>
    <externalId>true</externalId>
    <inlineHelpText>A unique key for the &quot;Drift Related Opportunity&quot; junction object created by joining the &quot;Drift Conversation&quot; object Salesforce ID to the &quot;Opportunity&quot; object Salesforce ID.</inlineHelpText>
    <label>ConversationOppKey</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>