unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Drift_Conversation__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Drift_Conversation__c</fullName>
    <description>The Drift Conversation record referenced by this junction object. Drift Conversations and Opportunities are joined via the Account object.</description>
    <inlineHelpText>The Drift Conversation record referenced by this junction object. Drift Conversations and Opportunities are joined via the Account object.</inlineHelpText>
    <label>Drift Conversation</label>
    <referenceTo>DriftData__Drift_Conversation__c</referenceTo>
    <relationshipLabel>Drift Related Opportunities</relationshipLabel>
    <relationshipName>Drift_Opportunity_Conversations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>