unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Email_Captured__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Email_Captured__c</fullName>
    <description>True if email was captured during the conversation.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Email_Captured__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if email was captured during the conversation.</inlineHelpText>
    <label>Email Captured</label>
    <type>Checkbox</type>
</CustomField>