unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Has_Site_Visitor__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Has_Site_Visitor__c</fullName>
    <description>True if a Site Visitor sent a message during the Drift conversation.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Has_Site_Visitor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if a Site Visitor sent a message during the Drift conversation.</inlineHelpText>
    <label>Has Site Visitor</label>
    <type>Checkbox</type>
</CustomField>