unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Inbox_ID__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Inbox_ID__c</fullName>
    <description>Drift&#39;s inbox ID that the Drift conversation is part of.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Inbox_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Drift&#39;s inbox ID that the Drift conversation is part of.</inlineHelpText>
    <label>Inbox ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>