unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Influenced_By_Drift__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Influenced_By_Drift__c</fullName>
    <description>If the number of days between the conversation start date and opportunity created date is less-than-or-equal-to the Influenced Look-Back Period, and the conversation happened prior to the opportunity close date, the value will be set to true. The Influenced Look-Back Period can be changed in Setup &gt; Custom Settings &gt; Drift Settings.</description>
    <formula>IF (
    AND (
            DATEVALUE( DriftData__Opportunity__r.CreatedDate ) - DATEVALUE  (DriftData__Drift_Conversation__r.DriftData__Conversation_Start_Time__c) &lt;= DriftData__Drift_Conversation__r.DriftData__Influenced_Look_Back_Period_fx__c,
            DriftData__Opportunity__r.CloseDate - DATEVALUE(DriftData__Drift_Conversation__r.DriftData__Conversation_Start_Time__c) &gt; 0
         ), 
true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the number of days between the conversation start date and opportunity created date is less-than-or-equal-to the Influenced Look-Back Period, and the conversation happened prior to the opportunity close date, the value will be set to true. The Influenced Look-Back Period can be changed in Setup &gt; Custom Settings &gt; Drift Settings.</inlineHelpText>
    <label>Influenced By Drift</label>
    <type>Checkbox</type>
</CustomField>