unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Booked__c</fullName>
    <description>True if a meeting was booked during the Drift conversation.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Meeting_Booked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if a meeting was booked during the Drift conversation.</inlineHelpText>
    <label>Meeting Booked</label>
    <type>Checkbox</type>
</CustomField>