unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Meeting_Duration__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Duration__c</fullName>
    <description>Duration of the scheduled meeting in minutes.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Meeting_Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Duration of the scheduled meeting in minutes.</inlineHelpText>
    <label>Meeting Duration (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>