unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Meeting_Owner__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Meeting_Owner__c</fullName>
    <description>Teammate with whom the meeting was booked.</description>
    <formula>HYPERLINK(&#39;/&#39; + DriftData__Drift_Conversation__r.DriftData__Meeting_Owner__c ,  DriftData__Drift_Conversation__r.DriftData__Meeting_Owner__r.FirstName  + &#39; &#39; + DriftData__Drift_Conversation__r.DriftData__Meeting_Owner__r.LastName, &#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Teammate with whom the meeting was booked.</inlineHelpText>
    <label>Meeting Owner</label>
    <type>Text</type>
</CustomField>