unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Number_of_Messages__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Number_of_Messages__c</fullName>
    <description>Total count of messages in the Drift conversation.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Number_of_Messages__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total count of messages in the Drift conversation.</inlineHelpText>
    <label>Total Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>