unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity__c</fullName>
    <description>The Opportunity record referenced by this junction object. Drift Conversations and Opportunities are joined via the Account object.</description>
    <inlineHelpText>The Opportunity record referenced by this junction object. Drift Conversations and Opportunities are joined via the Account object.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Drift Related Opportunities</relationshipLabel>
    <relationshipName>Drift_Opportunity_Conversations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>