unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Amount__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Amount__c</fullName>
    <description>The Opportunity Amount of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Amount of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>