unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Campaign_ID__c</fullName>
    <description>The Opportunity Campaign iD of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.Campaign.Id</formula>
    <inlineHelpText>The Opportunity Campaign iD of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Campaign ID</label>
    <type>Text</type>
</CustomField>