unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Campaign_Name__c</fullName>
    <description>The Opportunity Campaign Name of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.Campaign.Name</formula>
    <inlineHelpText>The Opportunity Campaign Name of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Campaign Name</label>
    <type>Text</type>
</CustomField>