unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Close_Date__c</fullName>
    <description>The Opportunity Close Date of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Close Date of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Close Date</label>
    <type>Date</type>
</CustomField>