unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Created_Date__c</fullName>
    <description>The Opportunity Created Date of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Created Date of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Created Date</label>
    <type>Date</type>
</CustomField>