unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Lead_Source__c</fullName>
    <description>The Opportunity Lead Source of the record referenced by this junction object.</description>
    <formula>text(DriftData__Opportunity__r.LeadSource)</formula>
    <inlineHelpText>The Opportunity Lead Source of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Lead Source</label>
    <type>Text</type>
</CustomField>