unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Name__c</fullName>
    <description>The Opportunity Name of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Name of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>