unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Owner_ID__c</fullName>
    <description>The Opportunity Owner ID of the record referenced by this junction object.</description>
    <formula>DriftData__Opportunity__r.Owner.Id</formula>
    <inlineHelpText>The Opportunity Owner ID of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Owner ID</label>
    <type>Text</type>
</CustomField>