unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Stage__c</fullName>
    <description>The Opportunity Stage of the record referenced by this junction object.</description>
    <formula>TEXT( DriftData__Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Opportunity Stage of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>