unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Opportunity_Type__c</fullName>
    <description>The Opportunity Type of the record referenced by this junction object.</description>
    <formula>text(DriftData__Opportunity__r.Type)</formula>
    <inlineHelpText>The Opportunity Type of the record referenced by this junction object.</inlineHelpText>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>