unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Site_Visitor_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Site_Visitor_Message_Count__c</fullName>
    <description>Number of messages sent by a Site Visitor.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Site_Visitor_Message_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Number of messages sent by a Site Visitor.</inlineHelpText>
    <label>Site Visitor Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>