unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Sourced__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Sourced__c</fullName>
    <description>True if Salesforce Lead or Contact associated with the Drift Conversation was created by Drift.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Sourced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Salesforce Lead or Contact associated with the Drift Conversation was created by Drift.</inlineHelpText>
    <label>Sourced</label>
    <type>Checkbox</type>
</CustomField>