unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Teammate__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Teammate__c</fullName>
    <description>Drift Teammate who first responded to the Drift conversation.</description>
    <formula>HYPERLINK(&#39;/&#39; + DriftData__Drift_Conversation__r.DriftData__Teammate__c ,  DriftData__Drift_Conversation__r.DriftData__Teammate__r.FirstName + &#39; &#39; + DriftData__Drift_Conversation__r.DriftData__Teammate__r.LastName,&#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Drift Teammate who first responded to the Drift conversation.</inlineHelpText>
    <label>Teammate (First)</label>
    <type>Text</type>
</CustomField>