unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/fields/DriftData__Teammate_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>DriftData__Teammate_Response_Time__c</fullName>
    <description>Time between first site visitor message and first Drift teammate’s response.</description>
    <formula>DriftData__Drift_Conversation__r.DriftData__Teammate_Response_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Time between first site visitor message and first Drift teammate’s response.</inlineHelpText>
    <label>Teammate Response Time (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>