unpackaged/main/default/objects/DriftData__Drift_Opportunity_Conversation__c/listViews/DriftData__All.listView-meta.xml
<ListView>
    <fullName>DriftData__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>